[tool.poetry]
name = "pyutils"
version = "1.0.0"
description = "Python utilitis of various kinds"
authors = ["Mayank Mahajan <mayankm2089@@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Python
jsonpath-ng = "^1.0" # https://github.com/json-path/JsonPath
python-dateutil = "^2.0" # https://github.com/dateutil/dateutil
inflection = "0.5.1" # https://github.com/jpvanhal/inflection
boltons = "^24.0" # https://github.com/mahmoud/boltons
opencv-python = "^4.0"
Deprecated = "1.2.14" # https://github.com/tantale/deprecated

# Django
django = "^5.0" # https://github.com/django/django
djangorestframework = "^3.15.0" # https://github.com/encode/django-rest-framework
django-model-utils = "^4.0" # https://github.com/jazzband/django-model-utils
factory-boy = "3.3.0"  # https://github.com/FactoryBoy/factory_boy
django-cities-light = "^3.0" # https://github.com/yourlabs/django-cities-light
django-smart-selects = {git = "https://github.com/jazzband/django-smart-selects"} # https://github.com/jazzband/django-smart-selects
django-filter = "^23.0" # https://github.com/carltongibson/django-filter
django-import-export = "^3.0" # https://github.com/django-import-export/django-import-export

# Wagtial
wagtail = "^6.0"


# Web
pyjwt = "2.8.0" # https://github.com/jpadilla/pyjwt
# latest pendulum
pendulum = "^3.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
